Wed Dec 12 16:37:47 GMT 2001  Olly Betts <olly@survex.com>

	* Updated omegascript documentation.

Wed Dec 12 15:43:19 GMT 2001  Olly Betts <olly@survex.com>

	* Fixed TOPDOC clipping.

Wed Dec 12 15:36:20 GMT 2001  Olly Betts <olly@survex.com>

	* templates/query: Fixed typo which caused "..." to appear after
	  page buttons when it wasn't appropriate.

Wed Dec 12 15:11:23 GMT 2001  Olly Betts <olly@survex.com>

	* omega: Added stopword list (still hardcoded at present though).

Wed Dec 12 12:46:57 GMT 2001  Olly Betts <olly@survex.com>

	* omindex: index unstemmed terms with prefix 'R' (mnemonic: Raw).

	* omega: $topterms will now return terms with prefix 'R'.

	* parsequery.yy: fixed handling of DEFAULT_OP; "+first second" and
	  "-first second" now work; stopwording queries working (currently
	  stopword list is hardwired to just "the") - stopwords are ignored
	  when used as normal terms, but not in phrases, or with + and -.

	* templates/query: make use of $prettyterm{}.

Wed Dec 12 11:11:30 GMT 2001  Olly Betts <olly@survex.com>

	* $highlight{} now uses find_if not find_first_of (faster).

	* Fixed detection of new/old/extended query when a term occurs
	  in the query more than once.

	* Added $prettyterm{TERM} to convert a probabilistic term for
	  display to the user.

	* $map would allow more than two arguments, but ignore them.  Fixed
	  to take exactly two.

Fri Dec 07 15:59:21 GMT 2001  Olly Betts <olly@survex.com>

	* Added macros to OmegaScript.

	* template/query: updated to use macros.

	* Removed specialcase to allow no-argument commands to accept an empty
	  argument list (e.g. "$thispage{}" rather than "$thispage").  The only
	  reason this was useful was to allow "$thispage{}s" which can just as
	  well be written using a comment to force the parser do what you want,
	  e.g. "$thispage${}s".

Thu Dec 06 18:59:34 GMT 2001  Olly Betts <olly@survex.com>

	* If a stemmer is set, and all_stem isn't, only stemmer terms starting