@@ -1,3 +1,8 @@
+Thu Dec 13 15:02:16 GMT 2001  Olly Betts <olly@survex.com>
+
+	* New operators: $div{}, $mod{}, $mul{}, $sub{}, $ge{}, $gt{}, $le{},
+	  $lt{}.
+
 Wed Dec 12 16:37:47 GMT 2001  Olly Betts <olly@survex.com>
 
 	* Updated omegascript documentation.
